// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account View should render Account Correctly 1`] = `
<Styled(MyAccountLayoutView)
  active="accountOverview"
  activeSubComponent="accountOverview"
  labels={Object {}}
  navData={Array []}
  router={
    Object {
      "query": Object {
        "id": "accountOverview",
      },
    }
  }
/>
`;

exports[`Account View should render Account container Correctly 1`] = `
<Styled(MyAccountLayoutView)
  active="addressBook"
  activeSubComponent="addressBook"
  labels={Object {}}
  navData={Array []}
  router={
    Object {
      "query": Object {
        "id": "addressBook",
      },
    }
  }
/>
`;
